--- a/IValve/IValve/IValve.csproj
+++ b/IValve/IValve/IValve.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="Stylet" Version="1.3.6" />
   </ItemGroup>
 
